--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: #fffef7;
+}
+
 .header {
   width: 100%;
   height: 75px;
@@ -75,22 +87,12 @@
   z-index: 2;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
 }
-.menu ul li {
+.menu li {
   list-style-type: none;
   font-size: 32px;
   padding: 30px 0;
-  text-align: center;
+  /* text-align: center; */
 }
 .menu--open {
   display: block;
-}
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-  background-color: #fffef7;
-}
-* {
-  box-sizing: border-box;
 }
