--- a/styles/index.css
+++ b/styles/index.css
@@ -90,8 +90,9 @@ body {
 .menu li {
   list-style-type: none;
   font-size: 32px;
-  padding: 30px 0;
+  margin: 30px 0;
   /* text-align: center; */
+  cursor: pointer;
 }
 .menu--open {
   display: block;
