--- a/styles/index.css
+++ b/styles/index.css
@@ -75,22 +75,28 @@ body {
 .menu {
   display: none;
   position: fixed;
-  top: 75px;
-  left: 30px;
+  top: 90px;
+  left: 15px;
+
   width: 350px;
   height: 80vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
   background-color: #81c784;
-  border: 1px solid #004d40;
   border-radius: 10px;
   z-index: 2;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
 }
+.menu ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
 .menu li {
-  list-style-type: none;
-  font-size: 32px;
-  margin: 30px 0;
-  /* text-align: center; */
+  font-size: 25px;
+  margin: 40px 0;
+  text-align: center;
   cursor: pointer;
 }
 .menu--open {
